Refactor: Converted Java classes to Kotlin
Converted the following Java classes to Kotlin:
- CategoryReportAll
- AccountByPeriodReport
- CategoryByPeriodReport
- ProjectsReport
- PayeeByPeriodReport
- LocationsReport
- PayeesReport
- ReportData

Also, updated related Java classes:
- AbstractReportTest
- MyEntityManager
- ReportActivity
- DailyAutoBackupScheduler
- SubCategoryReport
- Report